fixed scrollbar on windows

--- a/css/customstyles.css
+++ b/css/customstyles.css
@@ -1,12 +1,14 @@
 body {
     font-size:15px;
     background-color: #fafafa;
-    font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+    font-family: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 span.projectTitle {
     font-weight: bold;
-    font-family: Roboto,Helvetica Neue Light,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
+    font-family: "Roboto","Helvetica Neue Light","Helvetica Neue",Helvetica,Arial,"Lucida Grande",sans-serif;
 }
 
 ul.nav.navbar-nav {
@@ -420,6 +422,7 @@ a.accordion-toggle, a.accordion-collapsed {
 
 .nav li a {
     font-size: 14px;
+    font-weight: 400;
     line-height: 24px;
     padding: 2px 10px 2px 30px;
 
@@ -432,7 +435,7 @@ a.accordion-toggle, a.accordion-collapsed {
 #tg-sb-sidebar {
     box-shadow: 4px 2px 5px -2px rgba(0,0,0,0.2);
     height: calc(100vh - 40px);
-    overflow-y: scroll;
+    overflow-y: auto;
     position: fixed;
     width: 270px;
     box-sizing: content-box;
@@ -468,7 +471,7 @@ ul#mysidebar {
 }
 
 .nav li a {
-    padding-right:10px;
+    padding-right:13px;
 }
 
 .nav li a:hover {
